--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "project-pizzeria",
     "version": "1.0.0",
-    "description": "pizzeria",
+    "description": "",
     "main": "index.html",
     "scripts": {
         "init-project": "npm install && npm-run-all init:*",
@@ -10,8 +10,8 @@
         "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
         "init:gitignore:custom": "echo \"dist\" >> .gitignore",
         "test": "npm-run-all test:*",
-        "test:js": "eslint src/js/",
         "test:html": "globstar nu-html-checker dist/*.html",
+        "test:js": "eslint src/js/",
         "test:scss": "stylelint src/sass/",
         "build": "npm-run-all build:* test",
         "build:clean": "mkdirp dist && rm -r dist && mkdirp dist",
@@ -21,8 +21,8 @@
         "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
         "build-dev:sass": "node-sass --output-style expanded --source-map true -o dist/css src/sass",
         "server": "json-server --port 3131 --no-cors --delay 250 --watch dist/db/app.json",
-		"watch": "npm-run-all build build-dev -p watch:* server",
-		"watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\" --ignore \"dist/db/**/*\"",
+        "watch": "npm-run-all build build-dev -p watch:* server",
+        "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\" --ignore \"dist/db/**/*\"",
         "watch:sassprefixer": "onchange \"src/sass/**/*.scss\" -- npm run build-dev",
         "watch:copy": "onchange -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" -- copyfiles -a -u 1 {{changed}} dist"
     },
@@ -30,7 +30,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "json-server": "^0.16.2"
+      "json-server": "^0.14.2"
     },
     "devDependencies": {
         "autoprefixer-cli": "^1.0.0",
