--- a/src/db/app.json
+++ b/src/db/app.json
@@ -206,7 +206,7 @@
   "event": [
     {
       "id": 1,
-      "date": "2019-01-01",
+      "date": "2020-11-13",
       "hour": "12:30",
       "table": 1,
       "repeat": false,
@@ -216,44 +216,45 @@
     },
     {
       "id": 2,
-      "date": "2019-01-01",
+      "date": "2020-11-14",
       "hour": "16:00",
       "table": 3,
-      "repeat": "daily",
+      "repeat": "false",
       "duration": 2,
       "ppl": 3,
       "starters": ["bread", "lemonWater"]
     },
     {
       "id": 3,
-      "date": "2019-01-01",
+      "date": "2020-11-20",
       "hour": "12:00",
       "table": 3,
-      "repeat": "daily",
+      "repeat": "false",
       "duration": 2,
       "ppl": 3,
       "starters": ["bread", "lemonWater"]
     },
     {
       "id": 4,
-      "date": "2019-01-01",
+      "date": "2020-11-21",
       "hour": "13:00",
       "table": 2,
-      "repeat": "daily",
+      "repeat": "false",
       "duration": 4,
       "ppl": 3,
       "starters": []
     },
-    {
-      "id": 5,
-      "date": "2019-01-01",
-      "hour": "18:00",
-      "table": 2,
-      "repeat": "daily",
-      "duration": 2,
-      "ppl": 3,
-      "starters": ["lemonWater"]
-    }
   ],
-  "booking": []
+  "booking": [
+    {
+      "id": 1,
+      "date": "2020-11-14",
+      "hour": "12:30",
+      "table": 1,
+      "repeat": false,
+      "duration": 4,
+      "ppl": 3,
+      "starters": []
+    }
+  ]
 }
