--- a/src/db/app.json
+++ b/src/db/app.json
@@ -204,57 +204,47 @@
   ],
   "order": [],
   "event": [
-    {
-      "id": 1,
-      "date": "2020-11-13",
-      "hour": "12:30",
-      "table": 1,
-      "repeat": false,
-      "duration": 4,
-      "ppl": 3,
-      "starters": []
-    },
-    {
-      "id": 2,
-      "date": "2020-11-14",
-      "hour": "16:00",
-      "table": 3,
-      "repeat": "false",
-      "duration": 2,
-      "ppl": 3,
-      "starters": ["bread", "lemonWater"]
-    },
-    {
-      "id": 3,
-      "date": "2020-11-20",
-      "hour": "12:00",
-      "table": 3,
-      "repeat": "false",
-      "duration": 2,
-      "ppl": 3,
-      "starters": ["bread", "lemonWater"]
-    },
-    {
-      "id": 4,
-      "date": "2020-11-21",
-      "hour": "13:00",
-      "table": 2,
-      "repeat": "false",
-      "duration": 4,
-      "ppl": 3,
-      "starters": []
-    },
-  ],
-  "booking": [
-    {
-      "id": 1,
-      "date": "2020-11-14",
-      "hour": "12:30",
-      "table": 1,
-      "repeat": false,
-      "duration": 4,
-      "ppl": 3,
-      "starters": []
-    }
-  ]
-}
+     {
+       "id": 1,
+       "date": "2020-11-13",
+       "hour": "12:00",
+       "table": 1,
+       "repeat": false,
+       "duration": 1,
+       "ppl": 3,
+       "starters": []
+     },
+     {
+       "id": 2,
+       "date": "2020-11-13",
+       "hour": "16:00",
+       "table": 3,
+       "repeat": false,
+       "duration": 1,
+       "ppl": 3,
+       "starters": ["bread", "lemonWater"]
+     },
+     {
+       "id": 4,
+       "date": "2020-11-13",
+       "hour": "22:00",
+       "table": 3,
+       "repeat": "daily",
+       "duration": 1,
+       "ppl": 3,
+       "starters": []
+     }
+    ],
+   "booking": [
+     {
+       "id": 1,
+       "date": "2020-11-13",
+       "hour": "21:00",
+       "table": 2,
+       "repeat": false,
+       "duration": 2,
+       "ppl": 3,
+       "starters": ["lemonWater"]
+     }
+   ]
+ }
