--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@splidejs/splide": "^2.4.14",
         "flatpickr": "^4.6.6",
         "json-server": "^0.14.2",
         "rangeslider-pure": "^0.4.11"
